# fraudar

./: .bumpversion.cfg  .codeclimate.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  sample.py  setup.py  tox.ini  wercker.yml
.github/workflows/: publish.yaml  python-lib.yaml  static.yaml
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: footer.html  layout.html
docs/source/modules/: fraudar.export.rst  fraudar.rst
fraudar/: __init__.py  __version__.py  graph.py
fraudar/export/: MinTree.py  README  __init__.py  greedy.py  run_greedy.py  testMinTree.py
misc/: index.html
tests/: __init__.py  conftest.py  graph_test.py  test_product.py  test_review_graph.py  test_suite.py
