[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core>=1" ]

[project]
name = "rgmining-fraudar"
version = "0.7.4"
description = "A wrapper of Fraudar algorithm for Review graph mining project"
readme = "README.rst"
keywords = [ "algorithm", "fraudar", "graph", "kdd", "mining", "review" ]
license = "GPL-3.0-only"
authors = [
  { name = "Junpei Kawamoto", email = "kawamoto.junpei@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "numpy>=2.2",
  "scikit-learn>=1.6.1",
]

optional-dependencies.sample = [
  "click>=8",
  "rgmining-synthetic-dataset>=0.9",
]
urls.documentation = "https://rgmining.github.io/fraudar/"
urls.homepage = "https://rgmining.github.io/fraudar/"
urls.repository = "https://github.com/rgmining/fraudar"

[tool.poetry]
packages = [
  { include = "fraudar" },
]
include = [ "COPYING", "LICENSE-2.0" ]

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.0.2"
pre-commit = "^4.1"
pre-commit-uv = "^4.1.4"
pytest = "^8.3.5"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.11.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=fraudar --cov-branch --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = [ "fraudar/export/*" ]

[tool.coverage.report]
exclude_lines = [ "\\.{3}" ]

[tool.bumpversion]
current_version = "0.7.4"
commit = true
pre_commit_hooks = [
  "poetry lock",
  "git add poetry.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.rst"

[[tool.bumpversion.files]]
filename = "fraudar/__version__.py"

[tool.mypy]
files = "fraudar/*.py,tests/**/*.py"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
